refactoring: 3차 코드 리팩터링